--- a/LocationServices/app/src/main/res/layout-land/fragment_main.xml
+++ b/LocationServices/app/src/main/res/layout-land/fragment_main.xml
@@ -13,8 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Iniciar leitura GPS"
-        android:id="@+id/button"
-        android:layout_centerHorizontal="true" />
+        android:id="@+id/button" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -22,10 +21,8 @@
         android:text="Leitura GPS"
         android:layout_below="@+id/button"
         android:id="@+id/textView"
-        android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
-        android:textSize="24sp"
-        />
+        android:textSize="12sp" />
 
     <fragment
         android:layout_width="match_parent"
@@ -33,6 +30,7 @@
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         class="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_below="@+id/textView"/>
+        android:layout_toRightOf="@+id/button"
+        android:layout_alignParentBottom="true" />
 
 </RelativeLayout>
