--- a/FinanceApp/app/src/main/res/layout/dialog_criar_conta.xml
+++ b/FinanceApp/app/src/main/res/layout/dialog_criar_conta.xml
@@ -18,7 +18,7 @@
             android:text="Nome"
             android:layout_marginRight="5dp"
             android:layout_marginEnd="5dp"
-            android:layout_gravity="right"
+            android:layout_gravity="end"
             />
 
         <EditText
@@ -33,10 +33,10 @@
             android:text="Saldo Inicial"
             android:layout_marginRight="5dp"
             android:layout_marginEnd="5dp"
-            android:layout_gravity="right"
+            android:layout_gravity="end"
             />
 
-        <com.blackcat.currencyedittext.CurrencyEditText
+        <concordia.financeapp.components.MoneyEditText
             android:id="@+id/dialog_criar_conta_edtSaldoInicial"
             android:layout_column="1"
             android:layout_row="1"
