--- a/FinanceApp/app/src/main/res/layout/dialog_criar_conta.xml
+++ b/FinanceApp/app/src/main/res/layout/dialog_criar_conta.xml
@@ -36,7 +36,7 @@
             android:layout_gravity="end"
             />
 
-        <concordia.financeapp.components.MoneyEditText
+        <com.blackcat.currencyedittext.CurrencyEditText
             android:id="@+id/dialog_criar_conta_edtSaldoInicial"
             android:layout_column="1"
             android:layout_row="1"
