--- a/FinanceApp/app/src/main/res/layout/activity_main.xml
+++ b/FinanceApp/app/src/main/res/layout/activity_main.xml
@@ -9,31 +9,15 @@
     <LinearLayout
         android:layout_margin="10dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/toolbar"
         android:orientation="vertical">
 
-        <LinearLayout
-            android:id="@+id/llConta"
+        <Spinner
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/toolbar"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="Conta: "
-                android:id="@+id/textView"
-                android:gravity="center_vertical"
-                android:textAppearance="?android:attr/textAppearanceMedium" />
-
-            <Spinner
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:id="@+id/spConta" />
-        </LinearLayout>
+            android:layout_weight="1"
+            android:id="@+id/spConta" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -63,7 +47,7 @@
 
     <com.miguelcatalan.materialsearchview.MaterialSearchView
         android:id="@+id/search_view"
-        app:theme="@style/AppTheme"
+        android:theme="@style/AppTheme"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
