--- a/FinanceApp/app/src/main/res/layout/dialog_criar_conta.xml
+++ b/FinanceApp/app/src/main/res/layout/dialog_criar_conta.xml
@@ -5,43 +5,26 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <GridLayout
-        android:orientation="vertical" android:layout_width="match_parent"
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:columnCount="2"
-        android:rowCount="2"
         android:layout_margin="15dp">
-
-        <TextView
-            android:layout_column="0"
-            android:layout_row="0"
-            android:text="Nome"
-            android:layout_marginRight="5dp"
-            android:layout_marginEnd="5dp"
-            android:layout_gravity="end"
-            />
 
         <EditText
             android:id="@+id/dialog_criar_conta_edtNome"
-            android:layout_column="1"
-            android:layout_row="0"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Descrição da Conta"
             android:layout_gravity="fill_horizontal" />
-
-        <TextView
-            android:layout_column="0"
-            android:layout_row="1"
-            android:text="Saldo Inicial"
-            android:layout_marginRight="5dp"
-            android:layout_marginEnd="5dp"
-            android:layout_gravity="end"
-            />
 
         <com.blackcat.currencyedittext.CurrencyEditText
             android:id="@+id/dialog_criar_conta_edtSaldoInicial"
-            android:layout_column="1"
-            android:layout_row="1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Saldo Inicial (R$)"
             android:layout_gravity="fill_horizontal"
             />
 
-    </GridLayout>
+    </LinearLayout>
 </LinearLayout>
