--- a/FipeApp/app/src/main/res/layout/marca_list_item.xml
+++ b/FipeApp/app/src/main/res/layout/marca_list_item.xml
@@ -2,8 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="10dp"
-    android:layout_marginTop="10dp">
+    android:background="?android:attr/selectableItemBackground"
+    android:paddingTop="10dp"
+    android:paddingBottom="10dp">
 
     <TextView
         android:layout_width="30dp"
@@ -24,9 +25,4 @@
         android:layout_toRightOf="@+id/tvIdMarca"
         android:layout_toEndOf="@+id/tvIdMarca" />
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_below="@+id/tvMarca"
-        android:background="@android:color/darker_gray"/>
 </RelativeLayout>
